--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,4 +1,7 @@
 <h2>Watchlist</h2>
+<h3>
+  <button>Add movie</button>
+</h3>
 <ul class="movies">
   <li *ngFor="let movie of movies">
     <a routerLink="/detail/{{movie.id}}">
