--- a/src/app/full-login/home/home.component.html
+++ b/src/app/full-login/home/home.component.html
@@ -1,9 +1,9 @@
-<h1>Hi {{currentUser.firstName}}!</h1>
+<h1>Hi user!</h1>
 <a class="nav-item nav-link" (click)="logout()">Logout</a>
 <h3>All registered users:</h3>
 <ul>
     <li *ngFor="let user of users">
-        {{user.username}} ({{user.firstName}} {{user.lastName}})
+        {{user.username}} ({{user.email}})
         - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
     </li>
 </ul>
