--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,7 @@
 /* Application-wide Styles */
 h1 {
-    color: #369;
+    color: #DDD;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 250%;
   }
   h2, h3 {
     color: #444;
