--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -2,7 +2,7 @@
   <h2>"{{movie.name | uppercase}}" Reviews</h2>
   <ul class="reviews">
     <li *ngFor="let review of reviews">
-      <a>
+      <a routerLink="/review">
         <span class="badge">{{review.id}}</span> {{review.name}}
       </a>
     </li>
