--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,3 +25,10 @@ h1 {
   nav a.active {
     color: #039be5;
   }
+  .jumbotron {
+    background-image: url("./Background.png");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
