--- a/src/app/movies/movies.component.css
+++ b/src/app/movies/movies.component.css
@@ -1,51 +1,37 @@
 
-.movies {
-    margin: 0 0 2em 0;
-    list-style-type: none;
-    padding: 0;
-    width: 15em;
-  }
-  .movies li {
-    cursor: pointer;
-    position: relative;
-    left: 0;
-    background-color: #EEE;
-    margin: .5em;
-    padding: .3em 0;
-    height: 1.6em;
-    border-radius: 4px;
-  }
-  .movies li:hover {
-    color: #607D8B;
-    background-color: #DDD;
-    left: .1em;
-  }
-  .movies a {
-    color: #333;
-    text-decoration: none;
-    position: relative;
-    display: block;
-    width: 250px;
-  }
-  
-  .movies a:hover {
-    color:#607D8B;
-  }
-  .movies .badge {
-    display: inline-block;
-    font-size: small;
-    color: white;
-    padding: 0.8em 0.7em 0 0.7em;
-    background-color:#405061;
-    line-height: 1em;
-    position: relative;
-    width: 40px;
-    left: -1px;
-    top: -4px;
-    height: 2.4em;
-    margin-right: 0.8em;
-    border-radius: 4px 0 0 4px;
-  }
-  .h1{
-    color: #EEE;
-  }
+.box1 {
+  border: solid 1px #006699;
+  padding: 20px;
+  background: #f3f3f3;
+  border-radius: 5px;
+}
+
+.movies input.textfield {
+  width: 480px;
+  height: 36px;
+  margin-right: 20px;
+  font-size: 1.4em;
+  vertical-align: top;
+}
+
+.movies input.checkbox {
+  width: 20px;
+  height: 20px;
+}
+
+.movies .checked {
+  text-decoration: line-through;
+}
+
+.movies button {
+  height: 36px;
+  font-size: 1.1em;
+  vertical-align: top;
+  border: solid 1px #999;
+  border-radius: 2px;
+}
+
+.movies .delete-icon {
+  display: inline-block;
+  cursor: pointer;
+}
